[package]
name = "keccak256-aarch64-simd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
proptest = "1.3.1"
alloy-primitives = "0.4.2"
xkcp-rs = { git = "https://github.com/danipopes/xkcp-rs" }
