[package]
name = "keccak256-aarch64-simd"
authors = ["Remco Bloeman", "clabby"]
description = "SIMD Keccak256 implementation for aarch64 (w/ FEAT_SHA3)"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
proptest = "1.3.1"
alloy-primitives = "0.4.2"
xkcp-rs = { git = "https://github.com/danipopes/xkcp-rs", rev = "0974479" }
